Fixed #opt-in form alignment bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,11 +210,7 @@ footer a:hover {
 @media screen and ( max-width : 1199px ) {
 
 	#opt-in input[type="text"], #opt-in input[type="email"] {
-		width: 300px;
-	}
-
-	#opt-in input[type="submit"] {
-		margin: 7px 0 0;
+		width: 250px;
 	}
 
 	#happier-now .report-ad {
@@ -235,7 +231,9 @@ footer a:hover {
 	}
 
 	#opt-in input[type="submit"] {
+		margin: 7px 0 0;
 		display: block;
+		width: 425px;
 	}
 
 	#happier-now p.lead {
@@ -254,17 +252,27 @@ footer a:hover {
 
 	#opt-in input[type="text"], #opt-in input[type="email"] {
 		width: 425px;
-		margin: 0;
 	}
 
 	#opt-in input[type="submit"] {
-		display: inline-block;
-		margin: 0;
+		display: block;
 	}
 
 }
 
 @media screen and ( max-width : 767px ) {
+
+	#opt-in div.form-group {
+		margin-bottom: 10px;
+	}
+
+	#opt-in input[type="text"], #opt-in input[type="email"] {
+		width: 100%;
+	}
+
+	#opt-in input[type="submit"] {
+		width: 100%;
+	}
 
 	#happier-now .report-cover {
 		text-align: center;
